added hours through 17:00. corrected js file to accurately  update past,present,future colors for their timeblocks.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,9 @@
+:root {
+  --mainfFont: 'Cherry Bomb One', cursive;
+}
+
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: var(--mainfFont);
   font-size: 16px;
 }
 
