--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 :root {
-  --mainfFont: 'Cherry Bomb One', cursive;
+  --mainfFont: 'Monomaniac One', sans-serif;
 }
 
 body {
@@ -51,13 +51,22 @@ textarea {
 
 .saveBtn {
   border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
 }
 
 .saveBtn i:hover {
+  font-size: 20px;
+  transition: all 0.3s ease-in-out;
+}
+
+.trashBtn {
+  border-left: 1px solid black;
+  background-color: #d50644;
+  color: white;
+}
+
+.trashBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
