--- a/assets/style.css
+++ b/assets/style.css
@@ -60,6 +60,16 @@ textarea {
   transition: all 0.3s ease-in-out;
 }
 
+.saveallBtn {
+  background-color: #06aed5;
+  color: white;
+}
+
+.saveallBtn i:hover {
+  font-size: 20px;
+  transition: all 0.3s ease-in-out;
+}
+
 .trashBtn {
   border-left: 1px solid black;
   background-color: #d50644;
@@ -69,4 +79,19 @@ textarea {
 .trashBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.clearBtn {
+  margin-top:20px;
+  background-color: #d50644;
+  color: white;
+}
+
+.clearBtn i:hover {
+  font-size: 20px;
+  transition: all 0.3s ease-in-out;
+}
+
+footer {
+  font-family: var(--mainfFont);
 }
